# DreamEngine

./: .gitignore  CMakeLists.txt  README.md  cpp.hint
.github/workflows/: cmake-single-platform.yml
src/: .clang-format
src/CSharpCore/: CMakeLists.txt
src/Core/: Application.cpp  Application.h  ApplicationOptions.h  CMakeLists.txt  Color.h  CoreCApi.cpp  CoreCApi.h  CoreExport.h  EngineDefine.h  Timer.cpp  Timer.h
src/Core/ECS/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityMemoryPool.cpp  EntityMemoryPool.h
src/Core/ECS/Components/: CameraComponent.h  ChildrenComponent.h  Component.h  DirectionalLightComponent.h  MaterialComponent.h  MeshComponent.h  NativeScriptComponent.h  OutlineComponent.h  ParentComponent.h  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h  UiComponent.h
src/Core/GameSystem/: Camera.h  Game.cpp  Game.h  GlobalLight.h  Scene.cpp  Scene.h
src/Core/Helpers/: DateHelper.cpp  DateHelper.h  GUIDHelper.cpp  GUIDHelper.h  LoggerHelper.cpp  LoggerHelper.h
src/Core/IO/: File.cpp  File.h
src/Core/Inputs/: Input.cpp  Input.h  Key.h  KeyState.h  MouseButton.h
src/Core/Loggers/: ConsoleLogger.cpp  ConsoleLogger.h  Log.h  LogLevel.h  Logger.h  LoggerExternal.cpp  LoggerExternal.h  LoggerSingleton.cpp  LoggerSingleton.h
src/Core/Math/: Math.h
src/Core/Render/: FrameBuffer.h  Material.h  Mesh.h  OutlineOptions.h  OutlineScope.h  RenderAPI.cpp  RenderAPI.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderType.h  RenderView.h  RenderViewProvider.cpp  RenderViewProvider.h  Shader.h  Shape.h  Texture.h  TextureType.h  Vertex.h
src/Core/Render/Factories/: MeshFactory.cpp  MeshFactory.h
src/Core/Render/Helpers/: RenderTypeHelper.h
src/Core/Render/OpenGL/: OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.h
src/Core/Resources/: Font.h  GlobalResourceManager.cpp  GlobalResourceManager.h  Resource.h  ResourceManager.cpp  ResourceManager.h
src/Core/Scripting/: NativeScript.cpp  NativeScript.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEventHandler.cpp  ScriptEventHandler.h  ScriptInfo.h  coreclrhost.h
src/Core/Serializers/: IJsonSerializable.h
src/Core/Sync/: EntityData.h  EntitySynchronizer.cpp  EntitySynchronizer.h  GameData.h  GameSynchronizer.cpp  GameSynchronizer.h  InputData.h  InputSynchronizer.cpp  InputSynchronizer.h  SceneData.h
src/Core/UI/: IUiHandler.h  UiContent.h  UiInstance.h  UiManager.cpp  UiManager.h
src/Core/UI/RmlUI/: CustomRenderInterface_GL3.cpp  CustomRenderInterface_GL3.h  RmlClickBind.h  RmlClickListener.h  RmlHandler.cpp  RmlHandler.h  RmlUiInstance.h
src/Core/Vendors/: glad.h  glfw3.h
src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorDefine.h  EditorScene.cpp  EditorScene.h
src/Editor/Assets/: imgui.default.ini
src/Editor/Assets/Shaders/: outline.frag.glsl  outline.vert.glsl
src/Editor/Controllers/: CameraEditorController.cpp  CameraEditorController.h  DotNetCliController.cpp  DotNetCliController.h  EntityController.cpp  EntityController.h  ProjectController.cpp  ProjectController.h  ResourceController.cpp  ResourceController.h  SceneController.cpp  SceneController.h  ScriptController.cpp  ScriptController.h
src/Editor/Helpers/: FileHelper.cpp  FileHelper.h  ImGuiHelper.cpp  ImGuiHelper.h  TextureHelper.cpp  TextureHelper.h
src/Editor/Importers/: AssimpModelImporter.cpp  AssimpModelImporter.h  BaseModelImporter.h
src/Editor/Loggers/: EditorLogger.cpp  EditorLogger.h
src/Editor/Models/: EditorConfiguration.cpp  EditorConfiguration.h  EntityConfig.h  FileDialogConfig.h  FileIcon.h  Model.h  ProjectConfiguration.cpp  ProjectConfiguration.h  Result.h  SceneConfig.h  SceneData.h
src/Editor/Models/Datas/: ColorData.h  ComponentsData.h  DirectionalLightData.h  EntityConfigData.h  GlobalLightData.h  SceneData.h  TransformData.h  Vector3Data.h
src/Editor/Models/Datas/Components/: CameraComponentData.h  ChildrenComponentData.h  MaterialComponentData.h  MeshComponentData.h  ParentComponentData.h  ScriptComponentData.h  UiComponentData.h
src/Editor/Serializers/: MaterialSerializer.cpp  MaterialSerializer.h  ModelSerializer.cpp  ModelSerializer.h  ProjectConfigurationSerializer.cpp  ProjectConfigurationSerializer.h  SceneDataSerializer.cpp  SceneDataSerializer.h  ShaderSerializer.h  TextureSerializer.cpp  TextureSerializer.h  UiContentSerializer.cpp  UiContentSerializer.h  Vec3Serializer.cpp  Vec3Serializer.h
src/Editor/Singletons/: EditorSingleton.cpp  EditorSingleton.h
src/Editor/UI/Modals/: BaseModal.cpp  BaseModal.h  FileDialogModal.cpp  FileDialogModal.h  GetNameModal.cpp  GetNameModal.h  ImportResourceModal.cpp  ImportResourceModal.h  OpenProjectModal.cpp  OpenProjectModal.h
src/Editor/UI/Views/: ColorView.cpp  ColorView.h  LogView.cpp  LogView.h  MaterialView.cpp  MaterialView.h
src/Editor/UI/Windows/: BaseWindow.cpp  BaseWindow.h  FileExplorerWindow.cpp  FileExplorerWindow.h  GameWindow.cpp  GameWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  LoggerWindow.cpp  LoggerWindow.h  MaterialWindow.cpp  MaterialWindow.h  ProjectWindow.cpp  ProjectWindow.h  PropertyWindow.cpp  PropertyWindow.h  ResourceManagerWindow.cpp  ResourceManagerWindow.h  SceneWindow.cpp  SceneWindow.h
src/Editor/Vendors/: stb_image.h
src/Games/NativeGame/: CMakeLists.txt  FirstScene.cpp  FirstScene.h  main.cpp
src/Games/NativeGame/Assets/Shaders/: default.frag.glsl  default.vert.glsl
src/Games/NativeGame/Assets/UI/: hud.rml
src/Games/NativeGame/Scripts/: BoxScript.cpp  BoxScript.h  CameraScript.cpp  CameraScript.h  HudScript.cpp  HudScript.h
src/Profiling/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerResult.h  ProfilerTimer.cpp  ProfilerTimer.h
tests/CoreTests/: CMakeLists.txt
tests/CoreTests/ECS/: ECSTest.cpp
tests/CoreTests/Math/: Vector2Test.cpp  Vector3Test.cpp
tests/CoreTests/Serializers/: JsonSerializableTest.cpp
tests/CoreTests/Text/: JsonTests.cpp
tests/ProfilingTests/: CMakeLists.txt
tests/ProfilingTests/Tests/: ProfilerTest.cpp
(+44 files in other folders)
